# photo_watermark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
res/: photo_watermark.qrc
src/: main.cpp  mainWidgets.cpp  mainWidgets.h  mainWidgets.ui  photo_watermark.cpp  photo_watermark.h  utils.cpp  utils.h
